--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,10 @@
         <jackson-annotations.version>2.3.2</jackson-annotations.version>
         <jackson-databind.version>2.3.3</jackson-databind.version>
         <resteasy-client.version>3.0.7.Final</resteasy-client.version>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <lombok.version>1.16.6</lombok.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <maven.compiler.target>1.6</maven.compiler.target>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
 
         <log4j.version>1.2.16</log4j.version>
     </properties>
@@ -76,7 +76,11 @@
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
